--- a/supervisor/client.ini
+++ b/supervisor/client.ini
@@ -2,11 +2,11 @@
 command=python bin/deamon.py
 numprocs=1
 directory=/data/raspberry-pi-wechat-client
-pythonpath=/data/raspberry-pi-wechat-client
 autostart=true
 autorestart=true
 startretries=0
 exitcodes=0
-stopsignal=KILL
+stopsignal=TERM
 stopwaitsecs=10
 redirect_stderr=true
+environment=PYTHONPATH='/data/raspberry-pi-wechat-client'
