--- a/settings.yml
+++ b/settings.yml
@@ -3,6 +3,9 @@ device_id: 1
 server_host: '54.148.6.4'
 server_port: 8888
 
+redis_host: '127.0.0.1'
+redis_port: 6379
+redis_db: 0
 ht_sensor_channel: 17
 
 logging:
